Merged from CVS head 2010-05-13. New persistent service info updates implementation.